--- a/gallery.html
+++ b/gallery.html
@@ -51,23 +51,23 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/">Home</a>
+              <a class="nav-link" href="/photo/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/konstantyn-malczewski/gallery.html">Gallery</a>
+              <a class="nav-link active" href="/photo/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/about.html">About</a>
+              <a class="nav-link" href="/photo/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/contact.html">Contact</a>
+              <a class="nav-link" href="/photo/contact.html">Contact</a>
             </li>
           </ul>
           <hr class="site-menu-line">
         </div>
       </div>
     </nav>
-    <a href="/konstantyn-malczewski/">
+    <a href="/photo/">
       <h1 class="site-title">
         Konstantyn Malczewski
         <hr class="site-title-line">
