--- a/about.html
+++ b/about.html
@@ -52,23 +52,23 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/">Home</a>
+              <a class="nav-link" href="/photo/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/gallery.html">Gallery</a>
+              <a class="nav-link" href="/photo/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/konstantyn-malczewski/about.html">About</a>
+              <a class="nav-link active" href="/photo/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/contact.html">Contact</a>
+              <a class="nav-link" href="/photo/contact.html">Contact</a>
             </li>
           </ul>
           <hr class="site-menu-line">
         </div>
       </div>
     </nav>
-    <a href="/konstantyn-malczewski/">
+    <a href="/photo/">
       <h1 class="site-title">
         Konstantyn Malczewski
         <hr class="site-title-line">
@@ -187,7 +187,7 @@
                         href="https://www.instagram.com/konstantyn_photo/" target="_blank">Insta</a>, <a class="link"
                         href="https://www.facebook.com/KonstantynPhotography/" target="_blank">FB</a>.
                       Zachęcam
-                      do <a class="link" href="/konstantyn-malczewski/contact.html">kontaktu</a> i zróbmy razem
+                      do <a class="link" href="/photo/contact.html">kontaktu</a> i zróbmy razem
                       Twoje
                       najlepsze
                       zdjęcia!</p>
