--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" href="/konstantyn-malczewski/">Home</a>
+              <a class="nav-link active" href="/photo/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/gallery.html">Gallery</a>
+              <a class="nav-link" href="/photo/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/about.html">About</a>
+              <a class="nav-link" href="/photo/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/konstantyn-malczewski/contact.html">Contact</a>
+              <a class="nav-link" href="/photo/contact.html">Contact</a>
             </li>
           </ul>
           <hr class="site-menu-line">
@@ -72,7 +72,7 @@
         </div>
       </div>
     </nav>
-    <a href="/konstantyn-malczewski/">
+    <a href="/photo/">
       <h1 class="site-title">
         Konstantyn Malczewski
         <hr class="site-title-line">
@@ -170,7 +170,7 @@
         </div>
 
         <div class="position-relative">
-          <a class="button-link" href="/konstantyn-malczewski/gallery.html">
+          <a class="button-link" href="/photo/gallery.html">
             SEE MORE IN GALLERY
             <svg xmlns="http://www.w3.org/2000/svg" fill="#D227E1" class="bi bi-chevron-right" viewBox="0 0 16 16">
               <path fill-rule="evenodd"
