IG address change

--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
                       </div>
                     </div>
                     <p class="text mt-4">Zapraszam do moich profili na portalach społecznościowych: <a class="link"
-                        href="https://www.instagram.com/konstantyn_photo/" target="_blank">Insta</a>, <a class="link"
+                        href="https://www.instagram.com/fotograf_poland/" target="_blank">Insta</a>, <a class="link"
                         href="https://www.facebook.com/KonstantynPhotography/" target="_blank">FB</a>.
                       Zachęcam
                       do <a class="link" href="/photo/contact.html">kontaktu</a> i zróbmy razem
