Olaya photo change on About page

--- a/about.html
+++ b/about.html
@@ -156,33 +156,27 @@
                       <li class="mb-2">Retusz (modyfikacja obrazu, np. usuwanie jakichś nierówności twarzy - 9 zł za 1
                         obraz).</li>
                     </ul>
-                    <div class="row">
-                      <div class="col-12 col-lg-6">
-                        <p class="text">Co to jest "gotowe zdjęcie"? To jest udany portret jednej lub kilku osób,
-                          poddany
-                          odpowiednio
-                          pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni, balansu
-                          bieli).
-                          Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z aparatu.
-                          Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów
-                          fotografii
-                          analogowej.</p>
-                        <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, knajpa z fajnym
-                          wnętrzem,
-                          albo po
-                          prostu mieszkanie. W przypadku sesji w studio trzeba doliczyć koszt wynajmu studia (około 40
-                          zł
-                          godzina). W każdym razie, miejsce sesji jest kwestia dogadania - aby było najwygodniej i
-                          zdjęcia
-                          były najładniejsze.</p>
-                        <p class="text">Jestem też otwarty na ciekawe projekty na warunkach TFP - napisz, jeśli masz
-                          kreatywne
-                          pomysły</p>
-                      </div>
-                      <div class="col-12 col-lg-6 no-indent">
-                        <img class="img-fluid" src="images/about/olaya.png">
-                      </div>
-                    </div>
+                    <p class="text">Co to jest "gotowe zdjęcie"? To jest udany portret jednej lub kilku osób,
+                      poddany
+                      odpowiednio
+                      pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni, balansu
+                      bieli).
+                      Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z aparatu.
+                      Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów
+                      fotografii
+                      analogowej.</p>
+                    <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, knajpa z fajnym
+                      wnętrzem,
+                      albo po
+                      prostu mieszkanie. W przypadku sesji w studio trzeba doliczyć koszt wynajmu studia (około 40
+                      zł
+                      godzina). W każdym razie, miejsce sesji jest kwestia dogadania - aby było najwygodniej i
+                      zdjęcia
+                      były najładniejsze.</p>
+                    <img class="img-fluid mb-3" src="images/about/olaya2.jpg">
+                    <p class="text">Jestem też otwarty na ciekawe projekty na warunkach TFP - napisz, jeśli masz
+                      kreatywne
+                      pomysły</p>
                     <p class="text mt-4">Zapraszam do moich profili na portalach społecznościowych: <a class="link"
                         href="https://www.instagram.com/fotograf_poland/" target="_blank">Insta</a>, <a class="link"
                         href="https://www.facebook.com/KonstantynPhotography/" target="_blank">FB</a>.
