--- a/about.html
+++ b/about.html
@@ -139,12 +139,15 @@
                     <h4 class="text-sub-heading mb-3 mt-4">Moje usługi:</h4>
 
                     <ul class="text-list mb-4">
-                      <li class="mb-2">Express sesja portretowa - od 149 zł. Czas trwania około 40-50 min, jedna
+                      <li class="mb-2">Express sesja portretowa - od 149 zł. Czas trwania około 30 min, jedna
                         stylizacja, 10-20
                         gotowych zdjęć;</li>
                       <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual - od 249 zł. Czas
                         trwania około 2
                         godzin, 1-3 stylizację, 40-80 gotowych zdjęć;</li>
+                      <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle) - od
+                        299 zł. Czas trwania - od 2 godzin, wiele stylizacji;
+                      </li>
                       <li class="mb-2">Sesja dla par: lovestory/spacer/piknik - od 299 zł. Czas trwania około 2 godzin,
                         1-3
                         stylizację,
@@ -168,9 +171,7 @@
                     <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, knajpa z fajnym
                       wnętrzem,
                       albo po
-                      prostu mieszkanie. W przypadku sesji w studio trzeba doliczyć koszt wynajmu studia (około 40
-                      zł
-                      godzina). W każdym razie, miejsce sesji jest kwestia dogadania - aby było najwygodniej i
+                      prostu mieszkanie. W każdym razie, miejsce sesji jest kwestia dogadania - aby było najwygodniej i
                       zdjęcia
                       były najładniejsze.</p>
                     <img class="img-fluid mb-3" src="images/about/olaya2.jpg">
