translate a website to PL

--- a/contact.html
+++ b/contact.html
@@ -50,18 +50,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/">Główna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html">O mnie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/contact.html">Contact</a>
+              <a class="nav-link active" href="/contact.html">Kontakt</a>
             </li>
           </ul>
           <hr class="site-menu-line">
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 mt-3 mt-md-5">
             <div class="info-card ps-4 pe-4 pt-4 pb-4 text-start">
-              <h2 class="contact-heading">Contact me :)</h2>
+              <h2 class="contact-heading">Zapraszam do kontaku :)</h2>
               <address>
                 <p class="mb-4 mt-5">
                   <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#111010" class="bi bi-whatsapp"
