--- a/gallery.html
+++ b/gallery.html
@@ -49,18 +49,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/">Główna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/gallery.html">Gallery</a>
+              <a class="nav-link active" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html">O mnie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html">Kontakt</a>
             </li>
           </ul>
           <hr class="site-menu-line">
@@ -79,6 +79,119 @@
   <main>
 
     <!-- GALLERIES -->
+
+    <div id="family" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="7000">
+
+      <div class="carousel-inner container">
+        <div class="carousel-item active">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0121.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0049.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0069.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0089b&w.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0209.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0258-1.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0277.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0339.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_0358ret.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2534.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2538.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2587.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2611.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2668.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2689.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2740.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2930.jpg">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class=" text-center">
+            <img class="img-fluid" src="./images/gallery/family/DSC_2941.jpg">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#family" data-bs-slide="prev">
+          <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#D227E1" class="bi bi-chevron-left"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#family" data-bs-slide="next">
+          <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#D227E1" class="bi bi-chevron-right"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+          </svg>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <h2 class="gallery-heading">Rodzina</h2>
+    </div>
+
     <div id="locations" class="carousel slide" style="margin-top: 60px;" data-bs-ride="carousel"
       data-bs-interval="5000">
 
@@ -194,119 +307,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h2 class="gallery-heading">Locations</h2>
-    </div>
-
-    <div id="family" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="7000">
-
-      <div class="carousel-inner container">
-        <div class="carousel-item active">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0121.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0049.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0069.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0089b&w.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0209.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0258-1.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0277.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0339.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_0358ret.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2534.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2538.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2587.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2611.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2668.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2689.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2740.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2930.jpg">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class=" text-center">
-            <img class="img-fluid" src="./images/gallery/family/DSC_2941.jpg">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#family" data-bs-slide="prev">
-          <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#D227E1" class="bi bi-chevron-left"
-            viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#family" data-bs-slide="next">
-          <svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" fill="#D227E1" class="bi bi-chevron-right"
-            viewBox="0 0 16 16">
-            <path fill-rule="evenodd"
-              d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
-          </svg>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <h2 class="gallery-heading">Family</h2>
+      <h2 class="gallery-heading">Plener</h2>
     </div>
 
     <div id="studio" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="6000">
@@ -444,22 +445,6 @@
 
     <div id="wedding" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel" data-bs-interval="5000">
 
-      <!-- <div class="carousel-indicators">
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="0" class="active" aria-current="true"
-          aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="4" aria-label="Slide 5"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="5" aria-label="Slide 6"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="6" aria-label="Slide 7"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="7" aria-label="Slide 8"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="8" aria-label="Slide 9"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="9" aria-label="Slide 10"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="10" aria-label="Slide 11"></button>
-        <button type="button" data-bs-target="#wedding" data-bs-slide-to="11" aria-label="Slide 12"></button>
-      </div> -->
-
       <div class="carousel-inner container">
         <div class="carousel-item active">
           <div class=" text-center">
@@ -537,7 +522,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h2 class="gallery-heading">Wedding</h2>
+      <h2 class="gallery-heading">Ślub</h2>
     </div>
 
     <div id="lifestyle" class="carousel slide" style="margin-top: 80px;" data-bs-ride="carousel"
