--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link active" href="/">Główna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/about.html">O mnie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html">Kontakt</a>
             </li>
           </ul>
           <hr class="site-menu-line">
@@ -171,7 +171,7 @@
 
         <div class="position-relative">
           <a class="button-link" href="/gallery.html">
-            SEE MORE IN GALLERY
+            ZOBACZ PEŁNĄ GALERIĘ
             <svg xmlns="http://www.w3.org/2000/svg" fill="#D227E1" class="bi bi-chevron-right" viewBox="0 0 16 16">
               <path fill-rule="evenodd"
                 d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
