--- a/about.html
+++ b/about.html
@@ -50,18 +50,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link" href="/">Główna</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link active" href="/about.html">O mnie</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/contact.html">Kontakt</a>
             </li>
           </ul>
           <hr class="site-menu-line">
