--- a/index.html
+++ b/index.html
@@ -99,63 +99,83 @@
 
         <!-- MAIN PAGE IMAGES -->
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0921-1s.jpg" unselectable="on">
+          <a href="/gallery.html#locations">
+            <img class="img-fluid" src="./images/squares/DSC_0921-1s.jpg" unselectable="on">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0039-23s.jpg">
+          <a href="/gallery.html#studio"><img class="img-fluid" src="./images/squares/DSC_0039-23s.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0104-1nikon_offs.jpg">
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0420-1s.jpg">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0209s.jpg">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/F10000321_rets.jpg">
+          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0104-1nikon_offs.jpg">
+          </a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/Photoset Natasha012s.jpg">
+          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0420-1s.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_9663fs.jpg">
+          <a href="/gallery.html#family"> <img class="img-fluid" src="./images/squares/DSC_0209s.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0708_1_ретушь2_filtereds.jpg">
-        </div>
-
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0456-11s.jpg">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0585-1s.jpg">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/Photoset Natasha057s.jpg">
+          <a href="/gallery.html#lifestyle"> <img class="img-fluid" src="./images/squares/F10000321_rets.jpg">
+          </a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0167jpg_filtered_s.jpg">
+          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/Photoset Natasha012s.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_2689s.jpg">
+          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_9663fs.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_1447-1s.jpg">
+          <a href="/gallery.html#lifestyle"> <img class="img-fluid"
+              src="./images/squares/DSC_0708_1_ретушь2_filtereds.jpg">
+          </a>
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_2327bws.jpg">
+          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0456-11s.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0034s.jpg">
+          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_0585-1s.jpg">
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
-          <img class="img-fluid" src="./images/squares/DSC_0278-1_ret2s.jpg">
+          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/Photoset Natasha057s.jpg">
+          </a>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_0167jpg_filtered_s.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#family"> <img class="img-fluid" src="./images/squares/DSC_2689s.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#studio"> <img class="img-fluid" src="./images/squares/DSC_1447-1s.jpg">
+          </a>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_2327bws.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#locations"> <img class="img-fluid" src="./images/squares/DSC_0034s.jpg">
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 mb-4">
+          <a href="/gallery.html#lifestyle"> <img class="img-fluid" src="./images/squares/DSC_0278-1_ret2s.jpg">
+          </a>
         </div>
 
         <!-- CROPED IMAGES BOTTOM -->
