--- a/gallery.html
+++ b/gallery.html
@@ -51,13 +51,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/">Główna</a>
+              <a class="nav-link" href="/">Prettylook.pl</a> <!-- Główna -->
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">O mnie</a>
+              <a class="nav-link" href="/offer.html">Oferta</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact.html">Kontakt</a>
