--- a/offer.html
+++ b/offer.html
@@ -52,13 +52,13 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/">Główna</a>
+              <a class="nav-link" href="/">Prettylook.pl</a> <!-- Główna -->
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">O mnie</a>
+              <a class="nav-link active" href="/offer.html">Oferta</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact.html">Kontakt</a>
@@ -85,10 +85,9 @@
     <section>
       <div class="container">
         <div class="row">
-          <!-- <div class="col-12 col-md-8 offset-md-2 mt-3 mt-md-5 mb-5"> -->
           <div class="col-12 col-lg-10 offset-lg-1 t-3 mt-md-5 mb-5">
             <div class="info-card ps-4 pe-4 pt-4 pb-4 mb-4">
-              <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+              <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <!-- <li class="nav-item" role="presentation">
                   <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
                     type="button" role="tab" aria-controls="pills-home" aria-selected="true">
