--- a/index.html
+++ b/index.html
@@ -52,23 +52,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" href="/">Główna</a>
+              <a class="nav-link active" href="/">Prettylook.pl</a> <!-- Główna -->
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/gallery.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">O mnie</a>
+              <a class="nav-link" href="/offer.html">Oferta</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact.html">Kontakt</a>
             </li>
           </ul>
           <hr class="site-menu-line">
-          <!-- <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form> -->
         </div>
       </div>
     </nav>
