offer page changes

--- a/offer.html
+++ b/offer.html
@@ -135,29 +135,52 @@
                       wstać/usiąść/położyć się, jak trzymać ręce, głowę i tak dalej. Albo nawet mówię co robić - skakać,
                       biec czy śmiać się :)</p>
 
-                    <h4 class="text-sub-heading mb-3 mt-4">Moje usługi:</h4>
+                    <h4 class="text-sub-heading mb-3 mt-4">Moja oferta:</h4>
 
                     <ul class="text-list mb-4">
-                      <li class="mb-2">Express sesja portretowa - od 149 zł. Czas trwania około 30 min, jedna
+                      <li class="mb-2">Express sesja portretowa - od 149 zł;
+                        <!-- Czas trwania około 30 min, jedna
                         stylizacja, 10-20
-                        gotowych zdjęć;</li>
-                      <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual - od 249 zł. Czas
-                        trwania około 2
-                        godzin, 1-3 stylizację, 40-80 gotowych zdjęć;</li>
-                      <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle) - od
-                        299 zł. Czas trwania - od 2 godzin, wiele stylizacji;
+                        gotowych zdjęć; -->
                       </li>
-                      <li class="mb-2">Sesja dla par: lovestory/spacer/piknik - od 299 zł. Czas trwania około 2 godzin,
+                      <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual - od 249 zł;
+                        <!-- Czas
+                        trwania około 2
+                        godzin, 1-3 stylizację, 40-80 gotowych zdjęć; -->
+                      </li>
+                      <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle) - od
+                        299 zł;
+                        <!-- Czas trwania - od 2 godzin, wiele stylizacji; -->
+                      </li>
+                      <li class="mb-2">Sesja dla par: lovestory/spacer/piknik - od 299 zł;
+                        <!-- Czas trwania około 2 godzin,
                         1-3
                         stylizację,
-                        40-80 gotowych zdjęć;</li>
-                      <li class="mb-2">Sesja rodzinna (mama, tato, dzieci) - od 349 zł. Czas trwania - 1-3 godziny,
+                        40-80 gotowych zdjęć; -->
+                      </li>
+                      <li class="mb-2">Sesja rodzinna (mama, tato, dzieci) - od 349 zł;
+                        <!-- Czas trwania - 1-3 godziny,
                         kilka stylizacji,
-                        40-120 gotowych zdjęć;</li>
-                      <li class="mb-2">Reportaż - od 79 zł/godzina;</li>
-                      <li class="mb-2">Retusz (modyfikacja obrazu, np. usuwanie jakichś nierówności twarzy - 9 zł za 1
-                        obraz).</li>
+                        40-120 gotowych zdjęć; -->
+                      </li>
+                      <li class="mb-2">Reportaż - od 79 zł/godzina.</li>
+                      <!-- <li class="mb-2">Retusz (modyfikacja obrazu, np. usuwanie jakichś nierówności twarzy - 9 zł za 1
+                        obraz).</li> -->
                     </ul>
+                  </section>
+                  <section style="height: 100px;">
+                    <div class="position-relative">
+                      <a class="button-link button-link-offer" href="/contact.html">
+                        UMÓW SIĘ NA SESJE
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="#D227E1" class="bi bi-chevron-right"
+                          viewBox="0 0 16 16">
+                          <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                        </svg>
+                      </a>
+                    </div>
+                  </section>
+                  <section>
                     <p class="text">Co to jest "gotowe zdjęcie"? To jest udany portret jednej lub kilku osób,
                       poddany
                       odpowiednio
@@ -167,7 +190,7 @@
                       Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów
                       fotografii
                       analogowej.</p>
-                    <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, knajpa z fajnym
+                    <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, studio, knajpa z fajnym
                       wnętrzem,
                       albo po
                       prostu mieszkanie. W każdym razie, miejsce sesji jest kwestia dogadania - aby było najwygodniej i
