--- a/offer.html
+++ b/offer.html
@@ -139,33 +139,16 @@
 
                     <ul class="text-list mb-4">
                       <li class="mb-2">Express sesja portretowa - od 149 zł;
-                        <!-- Czas trwania około 30 min, jedna
-                        stylizacja, 10-20
-                        gotowych zdjęć; -->
                       </li>
-                      <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual - od 249 zł;
-                        <!-- Czas
-                        trwania około 2
-                        godzin, 1-3 stylizację, 40-80 gotowych zdjęć; -->
+                      <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual;
                       </li>
-                      <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle) - od
-                        299 zł;
-                        <!-- Czas trwania - od 2 godzin, wiele stylizacji; -->
+                      <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle);
                       </li>
-                      <li class="mb-2">Sesja dla par: lovestory/spacer/piknik - od 299 zł;
-                        <!-- Czas trwania około 2 godzin,
-                        1-3
-                        stylizację,
-                        40-80 gotowych zdjęć; -->
+                      <li class="mb-2">Sesja dla par: lovestory/spacer/piknik;
                       </li>
-                      <li class="mb-2">Sesja rodzinna (mama, tato, dzieci) - od 349 zł;
-                        <!-- Czas trwania - 1-3 godziny,
-                        kilka stylizacji,
-                        40-120 gotowych zdjęć; -->
+                      <li class="mb-2">Sesja rodzinna (mama, tato, dzieci);
                       </li>
                       <li class="mb-2">Reportaż - od 79 zł/godzina.</li>
-                      <!-- <li class="mb-2">Retusz (modyfikacja obrazu, np. usuwanie jakichś nierówności twarzy - 9 zł za 1
-                        obraz).</li> -->
                     </ul>
                   </section>
                   <section style="height: 100px;">
