offer page change

--- a/offer.html
+++ b/offer.html
@@ -138,8 +138,6 @@
                     <h4 class="text-sub-heading mb-3 mt-4">Moja oferta:</h4>
 
                     <ul class="text-list mb-4">
-                      <li class="mb-2">Express sesja portretowa - od 149 zł;
-                      </li>
                       <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual;
                       </li>
                       <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle);
@@ -148,7 +146,7 @@
                       </li>
                       <li class="mb-2">Sesja rodzinna (mama, tato, dzieci);
                       </li>
-                      <li class="mb-2">Reportaż - od 79 zł/godzina.</li>
+                      <li class="mb-2">Reportaż (wieczór kawalerski/panieński, uroczystosći i t. d.)</li>
                     </ul>
                   </section>
                   <section style="height: 100px;">
