one more offer page change

--- a/offer.html
+++ b/offer.html
@@ -146,7 +146,7 @@
                       </li>
                       <li class="mb-2">Sesja rodzinna (mama, tato, dzieci);
                       </li>
-                      <li class="mb-2">Reportaż (wieczór kawalerski/panieński, uroczystosći i t. d.)</li>
+                      <li class="mb-2">Reportaż (wieczór kawalerski/panieński, uroczystości i t. d.)</li>
                     </ul>
                   </section>
                   <section style="height: 100px;">
@@ -162,15 +162,11 @@
                     </div>
                   </section>
                   <section>
-                    <p class="text">Co to jest "gotowe zdjęcie"? To jest udany portret jednej lub kilku osób,
-                      poddany
-                      odpowiednio
-                      pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni, balansu
-                      bieli).
-                      Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z aparatu.
-                      Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów
-                      fotografii
-                      analogowej.</p>
+                    <p class="text">Co uważam za gotowe zdjęcie? To jest udany portret jednej lub kilku osób, poddany
+                      odpowiednio pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni,
+                      balansu bieli). Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z
+                      aparatu. Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów
+                      fotografii analogowej.</p>
                     <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, studio, knajpa z fajnym
                       wnętrzem,
                       albo po
@@ -182,8 +178,8 @@
                       kreatywne
                       pomysły</p>
                     <p class="text mt-4">Zapraszam do moich profili na portalach społecznościowych: <a class="link"
-                        href="https://www.instagram.com/fotograf_poland/" target="_blank">Insta</a>, <a class="link"
-                        href="https://www.facebook.com/KonstantynPhotography/" target="_blank">FB</a>.
+                        href="https://www.instagram.com/prettylook_pl/" target="_blank">Instagram</a>, <a class="link"
+                        href="https://www.facebook.com/PrettyLookPl" target="_blank">Facebook</a>.
                       Zachęcam
                       do <a class="link" href="/contact.html">kontaktu</a> i zróbmy razem
                       Twoje
