galleries order, offer page changes

--- a/offer.html
+++ b/offer.html
@@ -124,35 +124,24 @@
                     </em>
                   </section>
                   <section class="mt-3">
-                    <p class="text">Część! Mam na imię Konstantyn, jestem fotografem i moja specjalizacja - portret.
-                      Jeśli masz już dość selfie, przypadkowych zdjęć, zrobionych przez znajomych, albo "źle wychodzić
-                      na
-                      zdjęciach" - serdecznie zapraszam na sesje zdjęciową!</p>
-                    <p class="text">Przed sesją razem ustalamy lokacje,
-                      garderobę
-                      i ogólny styl przyszłych zdjęć. Zależy mi na tym, żeby uchwycić najlepsze momenty, żeby model była
-                      wyluzowana i miała dobry humor :) Podczas fotografowania kieruje procesem sesji: wskazuje gdzie
-                      wstać/usiąść/położyć się, jak trzymać ręce, głowę i tak dalej. Albo nawet mówię co robić - skakać,
-                      biec czy śmiać się :)</p>
+                    <p class="text">Część! Mam na imię Konstantyn, jestem fotografem i moja specjalizacja - fotografia ślubna, okolicznościowa i wizerunkowa. Zajmuje się fotografią od lat, mam rozsądne ceny i podchodzę do każdej sesji fotograficznej indywidualnie. Zadzwoń i razem ustalimy szczegóły i cenę sesji zdjęciowej.</p>
+                    <p class="text">Przed sesją razem ustalamy ogólny styl przyszłych zdjęć. Zależy mi na tym, żeby uchwycić najlepsze momenty, żeby model była wyluzowana i miała dobry humor :) Jeśli to nie jest sesja reportażowa, to w czasie fotografowania kieruje procesem sesji: wskazuje gdzie wstać/usiąść/położyć się, jak trzymać ręce, głowę i tak dalej. Albo nawet mówię co robić - skakać, biec czy śmiać się :)</p>
 
                     <h4 class="text-sub-heading mb-3 mt-4">Moja oferta:</h4>
 
                     <ul class="text-list mb-4">
-                      <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/business/casual;
-                      </li>
-                      <li class="mb-2">Sesja w studio (portret business/wizerunkowy, fashion/reklama, lifestyle);
-                      </li>
-                      <li class="mb-2">Sesja dla par: lovestory/spacer/piknik;
-                      </li>
-                      <li class="mb-2">Sesja rodzinna (mama, tato, dzieci);
-                      </li>
+                      <li class="mb-2">Fotografia ślubna - atrakcyjne ceny i elastyczne pakiety</li>
                       <li class="mb-2">Reportaż (wieczór kawalerski/panieński, uroczystości i t. d.)</li>
+                      <li class="mb-2">Sesja dla par: lovestory/spacer/piknik</li>
+                      <li class="mb-2">Kobieca sesja w stylach fashion/lifestyle/boudoir</li>
+                      <li class="mb-2">Sesja rodzinna (mama, tato, dzieci)</li>
+                      <li class="mb-2">Sesja w studio</li>
                     </ul>
                   </section>
                   <section style="height: 100px;">
                     <div class="position-relative">
                       <a class="button-link button-link-offer" href="/contact.html">
-                        UMÓW SIĘ NA SESJE
+                        SKONTAKTUJ SIĘ
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#D227E1" class="bi bi-chevron-right"
                           viewBox="0 0 16 16">
                           <path fill-rule="evenodd"
@@ -162,26 +151,22 @@
                     </div>
                   </section>
                   <section>
-                    <p class="text">Co uważam za gotowe zdjęcie? To jest udany portret jednej lub kilku osób, poddany
-                      odpowiednio pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni,
-                      balansu bieli). Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z
-                      aparatu. Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów
-                      fotografii analogowej.</p>
-                    <p class="text">Miejsce sesji - na życzenie: może to być park, ulicy miasta, studio, knajpa z fajnym
-                      wnętrzem,
-                      albo po
-                      prostu mieszkanie. W każdym razie, miejsce sesji jest kwestia dogadania - aby było najwygodniej i
-                      zdjęcia
-                      były najładniejsze.</p>
-                    <img class="img-fluid mb-3" src="images/about/olaya2.jpg">
-                    <p class="text">Jestem też otwarty na ciekawe projekty na warunkach TFP - napisz, jeśli masz
-                      kreatywne
-                      pomysły</p>
+                    <div class="row">
+                      <div class="col-12 col-lg-6">
+                        <p class="text">Co uważam za gotowe zdjęcie? To jest udany portret jednej lub kilku osób, poddany odpowiednio pasującej obróbce cyfrowej (ustawienie jasności, ostrości, kolorów, światła i cieni, balansu bieli). Obróbka jest potrzebna po to, żeby ulepszyć i podkreślić zdjęcie "surowe" z aparatu. Kilka zdjęć obrabiam dodatkowo z użyciem ciekawych efektów - imitacji różnych rodzajów fotografii analogowej.</p>
+                        <p class="text">Jestem też otwarty na ciekawe projekty na warunkach TFP - napisz, jeśli masz
+                          kreatywne
+                          pomysły</p>
+                      </div>
+                      <div class="col-12 col-lg-6 no-indent">
+                        <img class="img-fluid" src="images/about/olaya.png">
+                      </div>
+                    </div>
                     <p class="text mt-4">Zapraszam do moich profili na portalach społecznościowych: <a class="link"
                         href="https://www.instagram.com/prettylook_pl/" target="_blank">Instagram</a>, <a class="link"
-                        href="https://www.facebook.com/PrettyLookPl" target="_blank">Facebook</a>.
+                        href="https://www.facebook.com/PrettyLookPl/" target="_blank">Facebook</a>.
                       Zachęcam
-                      do <a class="link" href="/contact.html">kontaktu</a> i zróbmy razem
+                      do <a class="link" href="/konstantyn-malczewski/contact.html">kontaktu</a> i zróbmy razem
                       Twoje
                       najlepsze
                       zdjęcia!</p>
